# evolver

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml
crates/evolver-api/: Cargo.toml
crates/evolver-api/src/: agent.rs  channel.rs  lib.rs  media.rs  memory_traits.rs  observability_traits.rs  peripherals_traits.rs  runtime_traits.rs  tool.rs
crates/evolver-runtime/: Cargo.toml
crates/evolver-runtime/src/: lib.rs
src/: cli.rs  config.rs  evolution.rs  lib.rs  main.rs
src/provider/: mock.rs  mod.rs  openai.rs
