[workspace]
members = [".", "crates/evolver-api", "crates/evolver-runtime"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/raomuming/evolver"
rust-version = "1.87"

[workspace.dependencies]
evolver-api = { path = "crates/evolver-api", version = "0.1.0" }
zeroclaw-runtime = { path = "crates/evolver-runtime", version = "0.1.0", default-features = false }

[package]
name = "evolverlabs"
publish = false
version.workspace = true
edition.workspace = true

[[bin]]
name = "evolver"
path = "src/main.rs"

[lib]
name = "evolver"
path = "src/lib.rs"

[dependencies]
evolver-api.workspace = true
evolver-runtime.workspace = true